apps/management/argocd/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  hostnames: ["argocd.mcmahan.io"]
  parentRefs:
    - name: remote
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
